# ChangeLog for mail-client/claws-mail-mailmbox
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-mailmbox/ChangeLog,v 1.70 2012/06/30 15:55:37 fauli Exp $

*claws-mail-mailmbox-1.14.7 (30 Jun 2012)

  30 Jun 2012; Christian Faulhammer <fauli@gentoo.org>
  +claws-mail-mailmbox-1.14.7.ebuild:
  Version bump, mainly bug fixes

  04 May 2012; Jeff Horelick <jdhore@gentoo.org>
  claws-mail-mailmbox-1.14.6.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  11 Apr 2012; Christian Faulhammer <fauli@gentoo.org>
  -claws-mail-mailmbox-1.14.5.ebuild:
  clean up

  07 Apr 2012; Markus Meier <maekke@gentoo.org>
  claws-mail-mailmbox-1.14.6.ebuild:
  x86 stable, bug #387547

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org>
  claws-mail-mailmbox-1.14.6.ebuild:
  sparc stable wrt #387547

  08 Mar 2012; Brent Baude <ranger@gentoo.org>
  claws-mail-mailmbox-1.14.6.ebuild:
  Marking claws-mail-mailmbox-1.14.6 ppc64 stable for bug 387547

  04 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #206112

  28 Feb 2012; Brent Baude <ranger@gentoo.org>
  claws-mail-mailmbox-1.14.6.ebuild:
  Marking claws-mail-mailmbox-1.14.6 ppc stable for bug 387547

  25 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
  claws-mail-mailmbox-1.14.6.ebuild:
  Stable for amd64, wrt bug #387547

*claws-mail-mailmbox-1.14.6 (26 Dec 2011)

  26 Dec 2011; Christian Faulhammer <fauli@gentoo.org>
  +claws-mail-mailmbox-1.14.6.ebuild:
  version bump for bug 395381 by Justin

  22 Mar 2011; Christian Faulhammer <fauli@gentoo.org>
  -claws-mail-mailmbox-1.14.3.ebuild, -claws-mail-mailmbox-1.14.4.ebuild:
  clean up

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  claws-mail-mailmbox-1.14.5.ebuild:
  ppc64 stable wrt #350513

  05 Mar 2011; Brent Baude <ranger@gentoo.org>
  claws-mail-mailmbox-1.14.5.ebuild:
  Marking claws-mail-mailmbox-1.14.5 ppc stable for bug 350513
