@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-mailmbox/Attic/claws-mail-mailmbox-1.14.7.ebuild,v 1.1 2012/06/30 15:55:37 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-mailmbox/Attic/claws-mail-mailmbox-1.14.7.ebuild,v 1.2 2012/10/16 03:07:52 blueness Exp $
 
 MY_P="${P#claws-mail-}"
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.claws-mail.org/"
 SRC_URI="http://www.claws-mail.org/downloads/plugins/${MY_P}.tar.gz"
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ppc ppc64 ~sparc ~x86"
 IUSE=""
 RDEPEND=">=mail-client/claws-mail-3.8.1"
 DEPEND="${RDEPEND}
