@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-rssyl/Attic/claws-mail-rssyl-0.33.ebuild,v 1.1 2012/06/30 16:00:31 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-rssyl/Attic/claws-mail-rssyl-0.33.ebuild,v 1.2 2012/10/16 03:08:49 blueness Exp $
 
 EAPI="4"
 
@@ -13,7 +13,7 @@ HOMEPAGE="http://www.claws-mail.org/"
 SRC_URI="http://www.claws-mail.org/downloads/plugins/${MY_P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~x86"
+KEYWORDS="~alpha ~amd64 ppc ppc64 ~x86"
 IUSE="nls"
 RDEPEND=">=mail-client/claws-mail-3.8.1
 	net-misc/curl
