@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/claws-mail-rssyl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-rssyl/ChangeLog,v 1.107 2012/06/30 16:00:31 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-rssyl/ChangeLog,v 1.108 2012/10/16 03:08:49 blueness Exp $
+
+  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  claws-mail-rssyl-0.33.ebuild:
+  stable ppc ppc64, bug #437814
 
 *claws-mail-rssyl-0.33 (30 Jun 2012)
 
@@ -453,4 +457,3 @@
   19 Dec 2006; Andrej Kacian <ticho@gentoo.org> +metadata.xml,
   +claws-mail-rssyl-0.8.ebuild:
   This is the new name of mail-client/sylpheed-claws-rssyl.
-
